Bug 362375 - Can't expand canvas when clicking with tablet
Summary: Can't expand canvas when clicking with tablet
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 3.0 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-27 21:13 UTC by arualle91
Modified: 2016-04-29 16:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description arualle91 2016-04-27 21:13:41 UTC
The button to expand the canvas doesn't work when clicking it with my tablet pen, while it works normally with my mouse.

Works fine 2.9.11

Reproducible: Always

Steps to Reproduce:
1.Scroll beyond the edge of the image
2.Click on expand button with pen


Actual Results:  
The cursor doesn't change and the canvas doesn't expand

Expected Results:  
The canvas should expand when clicking

Windows 7
Wacom Bamboo
Comment 1 Halla Rempt 2016-04-28 06:40:40 UTC
I haven't had a chance to try to reproduce yet, but since it's a regression I've added a task to the board: https://phabricator.kde.org/T2380
Comment 2 Scott Petrovic 2016-04-29 00:14:14 UTC
I can confirm this on GIT master and my Windows 10 machine.  There is some custom input handling going on with this, so that is what is causing the issue.
Comment 3 Dmitry Kazakov 2016-04-29 16:03:49 UTC
Git commit 260745dfe6b893bdb25f2f101cd4728453240a5a by Dmitry Kazakov.
Committed on 29/04/2016 at 16:03.
Pushed by dkazakov into branch 'master'.

Fix clicking in pseudo infinity manager

Fixes T2380

M  +58   -11   libs/ui/canvas/kis_infinity_manager.cpp

http://commits.kde.org/krita/260745dfe6b893bdb25f2f101cd4728453240a5a