Fix clicking in pseudo infinity manager

Fixes T2380
BUG:362375